# SLN2Code

./: CMakeLists.txt  LICENSE  README.md  main.cpp
my-jsons/: launch.json  tasks.json
project/: CMakeList.txt  CMakeLists.txt
project/include/: Logo.h  SHA-2.cpp  SHA-3.cpp  SHA-MD.hpp  command_line_parser.h  compiler_service.h  constants.h  illustrate.md  library_info_provider.h  project_config.h  sha256.h  utils.h
project/inlucde/: builtin_library_provider.h  compiler_config.h  constants.h  debugger_config.h  debugger_service.h  directory_node.h  json_value.h  library_service.h  project_generator.h  project_structure_service.h  remote_library_provider.h  utils.h
project/lib/Linux/: illustrate.md
project/lib/Windows/: illustrate.md
project/src/: builtin_library_provider.cpp  command_line_parser.cpp  compiler_service.cpp  debugger_service.cpp  illustrate.md  json_value.cpp  library_service.cpp  main.cpp  project_generator.cpp  project_structure_service.cpp  remote_library_provider.cpp  sha256.cpp  update.cpp  utils.cpp
src/: main.cpp  main.s  sln2clean
src/Alpha/: illustrate.md  mainAlpha1.cpp
src/Beta/: main.cpp
